package models;

import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAttribute;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAutoGeneratedKey;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBHashKey;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTable;
import lombok.Data;

import java.util.ArrayList;
import java.util.Date;

@Data
@DynamoDBTable(tableName = "post")
public class Post {
    @DynamoDBHashKey
    @DynamoDBAutoGeneratedKey
    private String id;
    @DynamoDBAttribute
    private Post parentPost;
    @DynamoDBAttribute
    private PostThread postThread;
    @DynamoDBAttribute
    private Users fromUser;
    @DynamoDBAttribute
    private String content;
    @DynamoDBAttribute
    private Date date;
    @DynamoDBAttribute
    private int likes;


    public Post(Users fromUser) {
        this.fromUser = fromUser;
    }

    public Post(Post parentPost, Users fromUser) {
        this.parentPost = parentPost;
        this.fromUser = fromUser;
    }

    public Post() {
    }

    public Post(Post parentPost, PostThread postThread, Users fromUser, String id, String content, Date date, int likes) {
        this.parentPost = parentPost;
        this.postThread = postThread;
        this.fromUser = fromUser;
        this.id = id;
        this.content = content;
        this.date = date;
        this.likes = likes;
    }


    public void reply(Post post) {
        this.postThread.addPost(post);
        this.fromUser.getPosts().add(post);
    }


}
