package models;

public enum UserType {
    MODERATOR,
    USER
}
