package models;

import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAttribute;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAutoGeneratedKey;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBHashKey;
import lombok.Data;

@Data
public class Wine {
    @DynamoDBHashKey
    @DynamoDBAutoGeneratedKey
    String id;
    @DynamoDBAttribute
    String name;
    @DynamoDBAttribute
    String bio;

    public Wine() {
    }

    public Wine(String name, String id, String bio) {
        this.name = name;
        this.id = id;
        this.bio = bio;

    }
}
